--- a/.prettierignore
+++ b/.prettierignore
@@ -1,14 +1,17 @@
-# Logs
-logs
+###
+# Place your Prettier ignore content here
+
+###
+# .gitignore content is duplicated here due to https://github.com/prettier/prettier/issues/8506
 
 # Created by .ignore support plugin (hsz.mobi)
+### Node template
+# Logs
+/logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Runtime data
 pids
@@ -21,12 +24,11 @@ lib-cov
 
 # Coverage directory used by tools like istanbul
 coverage
-*.lcov
 
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
 # Bower dependency directory (https://bower.io/)
@@ -62,8 +64,6 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.test
-.envrc
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -76,7 +76,6 @@ typings/
 
 # Nuxt generate
 dist
->>>>>>> e281440 (enable to register service worker for firebase cloud messaging)
 
 # vuepress build output
 .vuepress/dist
